Fix alignment on breadcrumbs
Using first-child selector instead of a class so breadcrumbs in ie678 will be indented by 5px.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,7 +125,9 @@
         background-image: image-url("separator-2x.png");
         background-size: 6px 11px;
       }
-
+      &:first-child {
+        margin-left:0;
+      }
       &.last-child {
         background-image:none;
         color: $secondary-text-colour;
